--- a/assets/uis/permissions_form.ui
+++ b/assets/uis/permissions_form.ui
@@ -15,11 +15,18 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QLabel" name="label">
-     <property name="text">
-      <string>Choose users that will have access to &quot;{map}&quot;</string>
-     </property>
-    </widget>
+       <layout class="QHBoxLayout" name="horizontalLayout">
+           <item>
+               <widget class="QLabel" name="label">
+                   <property name="text">
+                       <string>Choose users that will have access to</string>
+                   </property>
+               </widget>
+           </item>
+           <item>
+               <widget class="QComboBox" name="comboBox"/>
+           </item>
+       </layout>
    </item>
    <item>
     <widget class="QScrollArea" name="scrollArea">
@@ -32,7 +39,7 @@
         <x>0</x>
         <y>0</y>
         <width>335</width>
-        <height>276</height>
+           <height>267</height>
        </rect>
       </property>
      </widget>
